[package]
name = "pitches"
version = "0.1.0"
authors = ["zduny <dzduniak@gmail.com>"]
edition = "2021"
description = "Structured representation of musical pitches, notes and intervals."
license = "Apache-2.0"
repository = "https://github.com/zduny/pitches"
documentation = "https://docs.rs/pitches/"
keywords = ["music", "pitch", "note"]

[dependencies]
lazy_static = "1.4.0"
ordered-float = "3.3.0"
